Integrated Notification micro service, Resolved merge conflicts and kept notification + grievance integration