@@ -1,62 +1,60 @@
 package com.samadhan.grievance_core_service.security;
 
-
-
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
+
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         return "OPTIONS".equalsIgnoreCase(request.getMethod());
     }
+
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
             HttpServletResponse response,
             FilterChain filterChain
     ) throws ServletException, IOException {
-        System.out.println("JwtFilter invoked");
+
         final String authHeader = request.getHeader("Authorization");
 
         String token = null;
         String email = null;
         String role = null;
 
-        // 1️⃣ Read token
+        // 🔹 Read token
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             token = authHeader.substring(7);
-            email = jwtUtil.extractUsername(token);
+            email = jwtUtil.extractEmail(token);
             role = jwtUtil.extractRole(token);
-
         }
 
-        // 2️⃣ If valid token & no auth present
+        // 🔹 Set authentication
         if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-
             if (jwtUtil.isTokenValid(token)) {
 
                 UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(
                                 email,
                                 null,
-                                List.of(new SimpleGrantedAuthority("ROLE_" + role))
+                                Collections.singletonList(new SimpleGrantedAuthority(role))
                         );
 
                 authentication.setDetails(
@@ -67,7 +65,7 @@ public class JwtFilter extends OncePerRequestFilter {
             }
         }
 
-        // 3️⃣ Continue filter chain
+
         filterChain.doFilter(request, response);
     }
 }
